--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rss": "^1.2.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
